Fix counter spacing

--- a/assets/sass/partials/_home.sass
+++ b/assets/sass/partials/_home.sass
@@ -1,10 +1,6 @@
 main
   text-align: left
 
-.title
-  font-size: 1.2rem
-  font-weight: bold
-
 .question
   margin-bottom: 5rem
 
@@ -14,8 +10,18 @@ main
   font-family: 'Roboto Mono', monospace
 
 .timer
+  margin: .5rem 0
   font-size: 1.5rem
   font-family: 'Roboto Mono', monospace
+
+  &_title
+    margin: 0
+    font:
+      size: 1.2rem
+      weight: bold
+
+  &_subtitle
+    font-size: .85rem
 
 .created-by
   font-size: .7em
